fixing overflow-x on body

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -45,6 +45,7 @@ body
   font-family: 'Open Sans'
   background: $blue
   background: linear-gradient(90deg, $blue 0%, $purple 100%)
+  overflow-x: hidden
 
 h1, h2, h3, h4, h5, h6
   font-weight: 600
